Fixed text overflow in comments section

--- a/src/components/commentsection/CommentSection.module.scss
+++ b/src/components/commentsection/CommentSection.module.scss
@@ -47,9 +47,13 @@
 
                     .person {
                         font-family: 'tex-bold';
+                        overflow-wrap: break-word;
                     }
                     .person::after {
                         content: '  ';
+                    }
+                    .text {
+                        overflow-wrap: anywhere;
                     }
                 }
                 .stats {
